Fix all navigation links appearing selected in High Contrast Mode

--- a/packages/govuk-frontend/src/govuk/components/service-header/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/service-header/_index.scss
@@ -108,20 +108,11 @@
   }
 
   .govuk-service-header__navigation-item {
-    // Negative offset the left margin so we can place a current page indicator
-    // to the left without misaligning the list item text.
-    margin: govuk-spacing(2) 0 govuk-spacing(2)
-      ((govuk-spacing(2) + $govuk-service-header-active-link-border-width) * -1);
-
-    padding-left: govuk-spacing(2);
-    border: 0 solid transparent;
-    border-left-width: $govuk-service-header-active-link-border-width;
+    margin: govuk-spacing(2) 0 govuk-spacing(2);
+    border: 0 solid;
 
     @include govuk-media-query($from: tablet) {
       margin: 0 govuk-spacing(6) 0 0;
-      padding-left: 0;
-      border-bottom-width: $govuk-service-header-active-link-border-width;
-      border-left-width: 0;
 
       &:last-of-type {
         margin: 0;
@@ -131,6 +122,18 @@
 
   .govuk-service-header__navigation-item--active {
     border-color: $govuk-link-colour;
+
+    @include govuk-media-query($until: tablet) {
+      // Negative offset the left margin so we can place a current page indicator
+      // to the left without misaligning the list item text.
+      margin-left: ((govuk-spacing(2) + $govuk-service-header-active-link-border-width) * -1);
+      padding-left: govuk-spacing(2);
+      border-left-width: $govuk-service-header-active-link-border-width;
+    }
+
+    @include govuk-media-query($from: tablet) {
+      border-bottom-width: $govuk-service-header-active-link-border-width;
+    }
   }
 
   // This is a <strong> element that is used as a fallback mechanism for
